--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
@@ -83,11 +83,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Main.cpp" />
-    <ClCompile Include="Source\Render.cpp" />
+    <ClCompile Include="Source\MT_Main.cpp" />
+    <ClCompile Include="Source\MT_Renderer.cpp" />
+    <ClCompile Include="Source\MT_Scene.cpp" />
+    <ClCompile Include="Source\MT_Shader.cpp" />
+    <ClCompile Include="Source\MT_Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Headers\GlobalConstants.h" />
+    <ClInclude Include="Headers\MT_Renderer.h" />
+    <ClInclude Include="Headers\MT_Scene.h" />
+    <ClInclude Include="Headers\MT_Shader.h" />
+    <ClInclude Include="Headers\MT_Window.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\SimpleShader.hlsl">
