--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ obj/
 [Rr]elease*/
 _ReSharper*/
 src/MountainTerrain/MountainTerrain.opensdf
+src/MountainTerrain/MountainTerrain/Debug/
+src/MountainTerrain/Debug/
