Git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ _ReSharper*/
 src/MountainTerrain/MountainTerrain.opensdf
 src/MountainTerrain/MountainTerrain/Debug/
 src/MountainTerrain/Debug/
+src/MountainTerrain/MountainTerrain/Debug/*
