Ignoring some more files

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ src/MountainTerrain/MountainTerrain.opensdf
 src/MountainTerrain/MountainTerrain/Debug/
 src/MountainTerrain/Debug/
 src/MountainTerrain/MountainTerrain/Debug/*
+src/MountainTerrain/MountainTerrain.sdf
+src/MountainTerrain/MountainTerrain.v11.suo
+src/MountainTerrain/MountainTerrain.opensdf
+src/MountainTerrain/MountainTerrain.sdf
+src/MountainTerrain/MountainTerrain.v11.suo
