--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ src/MountainTerrain/MountainTerrain.v11.suo
 src/MountainTerrain/MountainTerrain.opensdf
 src/MountainTerrain/MountainTerrain.sdf
 src/MountainTerrain/MountainTerrain.v11.suo
+src/MountainTerrain/Debug/*
+src/MountainTerrain/MountainTerrain/Debug/*
