Cleaning up still

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,20 @@
 #ignore thumbnails created by windows
 Thumbs.db
 #Ignore files build by Visual Studio
-*.user
-*.aps
-*.pch
-*.vspscc
-*_i.c
-*_p.c
-*.ncb
-*.suo
-*.bak
-*.cache
-*.ilk
-*.log
-[Bb]in
-[Dd]ebug*/
-*.sbr
-obj/
-[Rr]elease*/
-_ReSharper*/
-src/MountainTerrain/MountainTerrain.opensdf
-src/MountainTerrain/MountainTerrain/Debug/
-src/MountainTerrain/Debug/
-src/MountainTerrain/MountainTerrain/Debug/*
-src/MountainTerrain/MountainTerrain.sdf
-src/MountainTerrain/MountainTerrain.v11.suo
+src/MountainTerrain/*.user
+src/MountainTerrain/*.aps
+src/MountainTerrain/*.pch
+src/MountainTerrain/*.vspscc
+src/MountainTerrain/*_i.c
+src/MountainTerrain/*_p.c
+src/MountainTerrain/*.ncb
+src/MountainTerrain/*.suo
+src/MountainTerrain/*.bak
+src/MountainTerrain/*.cache
+src/MountainTerrain/*.ilk
+src/MountainTerrain/*.log
+src/MountainTerrain/*.sbr
 src/MountainTerrain/MountainTerrain.opensdf
 src/MountainTerrain/MountainTerrain.sdf
-src/MountainTerrain/MountainTerrain.v11.suo
 src/MountainTerrain/Debug/*
 src/MountainTerrain/MountainTerrain/Debug/*
