--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
@@ -99,6 +99,7 @@
     <ClInclude Include="Headers\MT_ConstantBuffer.h" />
     <ClInclude Include="Headers\MT_HeightMap.h" />
     <ClInclude Include="Headers\MT_InputHandler.h" />
+    <ClInclude Include="Headers\MT_Logger.h" />
     <ClInclude Include="Headers\MT_Renderer.h" />
     <ClInclude Include="Headers\MT_Scene.h" />
     <ClInclude Include="Headers\MT_Shader.h" />
