--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Source\MT_HeightMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\MT_BitmapReader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\VertexShader.hlsl" />
@@ -75,12 +78,24 @@
     <ClInclude Include="Headers\MT_Logger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Headers\MT_Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\MT_BitmapReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\MT_Utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\HeightMapImage.gif">
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="Resources\HeightMapImage.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\texture_grass.jpg">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
