Setting up solution to use DirectXTK

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ src/MountainTerrain/MountainTerrain.sdf
 src/MountainTerrain/Debug/*
 src/MountainTerrain/Release/*
 src/MountainTerrain/MountainTerrain/Debug/*
+src/MountainTerrain/MountainTerrain/Release/*
 *.cso
 *.log
 *.tlog
+
