--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
@@ -131,9 +131,13 @@
     <Image Include="Resources\HeightMapImage.gif" />
     <Image Include="Resources\texture_grass.bmp" />
     <Image Include="Resources\texture_grass.jpg" />
+    <Image Include="Resources\texture_rock.bmp" />
+    <Image Include="Resources\texture_water.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="PixelShader.cso" />
     <None Include="Shaders\Header.hlsli" />
+    <None Include="VertexShader.cso" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
