--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Source\MT_Utility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\MT_Light.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\VertexShader.hlsl" />
@@ -91,6 +94,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Headers\MT_Utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\MT_Light.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
