Fixed timestamping of screenshots
Refactored Logger.
Logger will quit on errors

--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="Source\MT_HeightMap.cpp" />
     <ClCompile Include="Source\MT_InputHandler.cpp" />
     <ClCompile Include="Source\MT_Light.cpp" />
+    <ClCompile Include="Source\MT_Logger.cpp" />
     <ClCompile Include="Source\MT_Main.cpp" />
     <ClCompile Include="Source\MT_Renderer.cpp" />
     <ClCompile Include="Source\MT_Shader.cpp" />
