Introducing a Settings file with macros to adjust modify settings
Got rid of some warnings : warning C4316: object allocated on the heap may not be aligned 16
Did this by not allocating on the heap - there was really no need to

--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
@@ -117,6 +117,7 @@
     <ClInclude Include="Headers\MT_Texture.h" />
     <ClInclude Include="Headers\MT_Utility.h" />
     <ClInclude Include="Headers\MT_Window.h" />
+    <ClInclude Include="Headers\MT_Settings.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\PixelShader.hlsl">
