--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="Source\MT_Light.cpp" />
     <ClCompile Include="Source\MT_Logger.cpp" />
     <ClCompile Include="Source\MT_Main.cpp" />
+    <ClCompile Include="Source\MT_Profiler.cpp" />
     <ClCompile Include="Source\MT_Renderer.cpp" />
     <ClCompile Include="Source\MT_Shader.cpp" />
     <ClCompile Include="Source\MT_Terrain.cpp" />
@@ -111,6 +112,7 @@
     <ClInclude Include="Headers\MT_HeightMap.h" />
     <ClInclude Include="Headers\MT_InputHandler.h" />
     <ClInclude Include="Headers\MT_Logger.h" />
+    <ClInclude Include="Headers\MT_Profiler.h" />
     <ClInclude Include="Headers\MT_Renderer.h" />
     <ClInclude Include="Headers\MT_Shader.h" />
     <ClInclude Include="Headers\MT_Terrain.h" />
