--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Source\MT_StatsWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\MT_Skybox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\VertexShader.hlsl" />
@@ -115,6 +118,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Headers\MT_StatsWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\MT_Skybox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
