--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="Source\MT_Profiler.cpp" />
     <ClCompile Include="Source\MT_Renderer.cpp" />
     <ClCompile Include="Source\MT_Shader.cpp" />
+    <ClCompile Include="Source\MT_Skybox.cpp" />
     <ClCompile Include="Source\MT_StatsWindow.cpp" />
     <ClCompile Include="Source\MT_Terrain.cpp" />
     <ClCompile Include="Source\MT_Texture.cpp" />
@@ -116,6 +117,7 @@
     <ClInclude Include="Headers\MT_Profiler.h" />
     <ClInclude Include="Headers\MT_Renderer.h" />
     <ClInclude Include="Headers\MT_Shader.h" />
+    <ClInclude Include="Headers\MT_Skybox.h" />
     <ClInclude Include="Headers\MT_StatsWindow.h" />
     <ClInclude Include="Headers\MT_Terrain.h" />
     <ClInclude Include="Headers\MT_Texture.h" />
