Refactored code to activate shader when needed
setup skybox shaders - for now just to return white - but looks like there is a problem with the input/output of Vertex Shader

--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
@@ -70,6 +70,8 @@
   <ItemGroup>
     <FxCompile Include="Shaders\MT_Terrain_VertexShader.hlsl" />
     <FxCompile Include="Shaders\MT_Terrain_PixelShader.hlsl" />
+    <FxCompile Include="Shaders\MT_Skybox_VertexShader.hlsl" />
+    <FxCompile Include="Shaders\MT_Skybox_PixelShader.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\MT_Renderer.h">
@@ -146,5 +148,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\MT_Terrain_ShaderHeader.hlsli" />
+    <None Include="Shaders\MT_Skybox_ShaderHeader.hlsli" />
   </ItemGroup>
 </Project>
