--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
@@ -148,6 +148,12 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Resources\CloudyLightRaysBack2048.png" />
+    <Image Include="Resources\CloudyLightRaysDown2048.png" />
+    <Image Include="Resources\CloudyLightRaysFront2048.png" />
+    <Image Include="Resources\CloudyLightRaysLeft2048.png" />
+    <Image Include="Resources\CloudyLightRaysRight2048.png" />
+    <Image Include="Resources\CloudyLightRaysUp2048.png" />
     <Image Include="Resources\HeightMapImage.bmp" />
     <Image Include="Resources\HeightMapImage.gif" />
     <Image Include="Resources\texture_grass.bmp" />
