--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
@@ -145,6 +145,24 @@
     <Image Include="Resources\texture_rock.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Resources\CloudyLightRaysBack2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\CloudyLightRaysDown2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\CloudyLightRaysFront2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\CloudyLightRaysLeft2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\CloudyLightRaysRight2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\CloudyLightRaysUp2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\MT_Terrain_ShaderHeader.hlsli" />
