--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
@@ -163,6 +163,24 @@
     <Image Include="Resources\CloudyLightRaysUp2048.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Resources\FullMoonBack2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\FullMoonDown2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\FullMoonFront2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\FullMoonLeft2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\FullMoonRight2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resources\FullMoonUp2048.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\MT_Terrain_ShaderHeader.hlsli" />
