More documentations thingies

--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj.filters
@@ -185,5 +185,6 @@
   <ItemGroup>
     <None Include="Shaders\MT_Terrain_ShaderHeader.hlsli" />
     <None Include="Shaders\MT_Skybox_ShaderHeader.hlsli" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
