--- a/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
+++ b/src/MountainTerrain/MountainTerrain/MountainTerrain.vcxproj
@@ -168,6 +168,7 @@
     <Image Include="Resources\texture_water.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="Shaders\MT_Skybox_ShaderHeader.hlsli" />
     <None Include="Shaders\MT_Terrain_ShaderHeader.hlsli" />
   </ItemGroup>
